# SonicAdventureGodot

./: .gitignore  project.godot  sonic.gdextension
addons/godot_state_charts/: state_chart.gd  state_chart_state.gd
addons/godot_state_charts/utilities/: state_chart_debugger.gd
models/: character.glb.import
objects/: badnik.gd  badnik.tscn  badnik_spawner.gd  cloud.gd  coin.gd  coin.tscn  pla2E34.tmp  pla33FF.tmp  pla4AD.tmp  pla7BCC.tmp  plaDA75.tmp  plaE8CD.tmp  plaEE0C.tmp  platform_falling.gd  player.gd  player.tscn  raycast_group.gd  respawn_plane.gd  ring.gd  ring.tscn  spring.gd  spring.tscn  targettable.gd
rust/: Cargo.toml
rust/src/: character_body_3d.rs  lib.rs  motion_structs.rs  player.rs  state_machine.rs
scenes/: main.tscn  plaB51E.tmp  plaFF34.tmp  playground.tscn  view.tscn
scripts/: audio.gd  hud.gd  player.gd  view.gd
